crates/strider-analyze/tests/snapshots/v2__ppc32be__floats__f64_compare.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ r9", shape=house, fillcolor="#163030"];
  "9" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "19" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "27" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "29" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "34" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "41" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "43" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "49" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "40" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "43" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "57" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "66" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "67" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "69" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "76" -> "74" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "76" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "71" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "77" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "79" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "79" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "81" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "81" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "68" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "82" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "84" -> "82" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "84" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "71" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
