crates/strider-analyze/tests/snapshots/v2__ppc32be__floats__float_to_int.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "10" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v11" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v11" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "12" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="FloatToInt\nf64 → u32", shape=box, fillcolor="#302018"];
  "14" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "15" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "5" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "17" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "15" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "23" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
